--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -14,8 +14,15 @@
     "@testing-library/user-event": "^13.5.0",
     "html-webpack-plugin": "^5.6.3",
     "react": "^19.0.0",
+    "react-contextmenu": "^2.14.0",
+    "react-desktop": "^0.3.9",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-frame-component": "^5.2.7",
+    "react-grid-layout": "^1.5.1",
+    "react-icons": "^5.5.0",
     "react-rnd": "^10.5.2",
     "react-scripts": "^5.0.1",
     "react-webview": "^0.1.0",
