--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -12,13 +12,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "eject": "^1.0.3",
     "electron": "^35.0.3",
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
+    "jsdom": "^26.0.0",
     "lucide-react": "^0.483.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-contextmenu": "^2.14.0",
     "react-desktop": "^0.3.9",
@@ -39,7 +42,7 @@
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   },
-  "main": "public/electron.js",
+  "main": "public/Electron/electron.js",
   "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
