--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -12,13 +12,16 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
+    "dexie": "^4.0.11",
     "eject": "^1.0.3",
     "electron": "^35.0.3",
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
+    "idb": "^8.0.2",
     "jsdom": "^26.0.0",
     "lucide-react": "^0.483.0",
     "node-fetch": "^3.3.2",
@@ -37,12 +40,14 @@
     "react-rnd": "^10.5.2",
     "react-scripts": "^5.0.1",
     "react-webview": "^0.1.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
   },
   "main": "public/Electron/electron.js",
+  "proxy": "http://localhost:3001",
   "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
