--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -34,6 +34,7 @@
     "react-draggable": "^4.4.6",
     "react-electron-web-view": "^2.0.1",
     "react-frame-component": "^5.2.7",
+    "react-grid-gallery": "^1.0.1",
     "react-grid-layout": "^1.5.1",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
