--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -7,18 +7,23 @@
     "@headlessui/react": "^2.2.0",
     "@module-federation/enhanced": "^0.11.1",
     "@module-federation/runtime": "^0.11.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "class-variance-authority": "^0.7.1",
     "eject": "^1.0.3",
     "electron": "^35.0.3",
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
-    "lucide-react": "^0.483.0",
+    "lucide-react": "^0.484.0",
     "react": "^18.3.1",
     "react-contextmenu": "^2.14.0",
     "react-desktop": "^0.3.9",
@@ -34,6 +39,7 @@
     "react-rnd": "^10.5.2",
     "react-scripts": "^5.0.1",
     "react-webview": "^0.1.0",
+    "tailwind-merge": "^3.0.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
@@ -64,5 +70,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "10.4.13",
+    "postcss": "8.4.21",
+    "postcss-cli": "^10.0.0",
+    "tailwindcss": "3.0.24"
   }
 }
