--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -42,8 +42,9 @@
     "react-icons": "^5.5.0",
     "react-rnd": "^10.5.2",
     "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.28.0",
     "react-webview": "^0.1.0",
-    "sonner": "^2.0.2",
+    "sonner": "^2.0.3",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "webpack": "^5.98.0",
