--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -9,6 +9,8 @@
     "@module-federation/runtime": "^0.11.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/dom": "^10.4.0",
@@ -28,8 +30,8 @@
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.483.0",
     "react": "^19.1.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-contextmenu": "^2.14.0",
-    "react-desktop": "^0.3.9",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
@@ -40,11 +42,14 @@
     "react-grid-layout": "^1.5.1",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
+    "react-player": "^2.16.0",
     "react-rnd": "^10.5.2",
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.28.0",
     "react-webview": "^0.1.0",
     "sonner": "^2.0.3",
+    "three": "^0.175.0",
+    "uuid": "^11.1.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "webpack": "^5.98.0",
