--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -24,6 +24,7 @@
     "eject": "^1.0.3",
     "electron": "^35.0.3",
     "framer-motion": "^12.6.3",
+    "groq-sdk": "^0.19.0",
     "html-webpack-plugin": "^5.6.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
@@ -45,8 +46,12 @@
     "react-player": "^2.16.0",
     "react-rnd": "^10.5.2",
     "react-scripts": "^5.0.1",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^4.0.0",
     "react-tooltip": "^5.28.0",
+    "react-tts": "^1.0.2",
     "react-webview": "^0.1.0",
+    "responsivevoice": "^0.4.1",
     "sonner": "^2.0.3",
     "three": "^0.175.0",
     "uuid": "^11.1.0",
