--- a/Back/FastApi/requirements.txt
+++ b/Back/FastApi/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-edge-tts==0.1.0
-langdetect==1.0.9
-aiohttp==3.8.3
+fastapi
+uvicorn
+edge-tts
+langdetect
+aiohttp
