--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -2,6 +2,14 @@
   "name": "desktop",
   "version": "0.1.0",
   "private": true,
+  "main": "public/Electron/electron.js",
+  "homepage": "./",
+  "scripts": {
+    "start": "vite",
+    "electron": "electron .",
+    "build": "vite build",
+    "electron-pack": "vite build && electron ."
+  },
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "@headlessui/react": "^2.2.0",
@@ -9,65 +17,43 @@
     "@module-federation/runtime": "^0.11.1",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/drei": "^10.0.5",
-    "@react-three/fiber": "^9.1.1",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.10",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
-    "eject": "^1.0.3",
     "electron": "^35.0.3",
     "framer-motion": "^12.6.3",
     "groq-sdk": "^0.19.0",
-    "html-webpack-plugin": "^5.6.3",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.483.0",
     "react": "^19.1.0",
-    "react-chatbot-kit": "^2.2.2",
-    "react-contextmenu": "^2.14.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
-    "react-draggable": "^4.4.6",
-    "react-electron-web-view": "^2.0.1",
-    "react-frame-component": "^5.2.7",
     "react-grid-gallery": "^1.0.1",
     "react-grid-layout": "^1.5.1",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-rnd": "^10.5.2",
-    "react-scripts": "^5.0.1",
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^4.0.0",
     "react-tooltip": "^5.28.0",
-    "react-tts": "^1.0.2",
-    "react-webview": "^0.1.0",
-    "responsivevoice": "^0.4.1",
     "sonner": "^2.0.3",
-    "three": "^0.175.0",
     "uuid": "^11.1.0",
-    "uuidv4": "^6.2.13",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "web-vitals": "^2.1.4"
   },
-  "main": "public/Electron/electron.js",
-  "homepage": "./",
-  "scripts": {
-    "start": "react-scripts start",
-    "electron": "electron .",
-    "build": "react-scripts build",
-    "electron-pack": "react-scripts build && electron ."
+  "devDependencies": {
+    "autoprefixer": "10.4.13",
+    "postcss": "^8.5.3",
+    "postcss-cli": "^10.0.0",
+    "tailwindcss": "3.0.24",
+    "vite": "^6.2.5"
   },
   "eslintConfig": {
     "extends": [
@@ -86,11 +72,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "10.4.13",
-    "postcss": "8.4.21",
-    "postcss-cli": "^10.0.0",
-    "tailwindcss": "3.0.24"
   }
 }
