--- a/Front/desktop/Dockerfile
+++ b/Front/desktop/Dockerfile
@@ -20,7 +20,7 @@ RUN npm run build
 FROM nginx:stable-alpine
 
 # Copie des fichiers de build vers Nginx
-COPY --from=builder /app/build /usr/share/nginx/html
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 # Expose le port 80
 EXPOSE 80
