--- a/Front/desktop/package.json
+++ b/Front/desktop/package.json
@@ -4,11 +4,61 @@
   "private": true,
   "main": "public/Electron/electron.js",
   "homepage": "./",
+  "author": "Genesis Company",
+  "description": "SkyOS is a powerful and versatile operating system designed to provide users with a seamless and efficient computing experience. With its user-friendly interface, robust performance, and extensive features, SkyOS empowers users to accomplish their tasks with ease and productivity.",
+  "build": {
+    "appId": "com.skyos.desktop",
+    "copyright": "Copyright © 2025 Genesis Company.",
+    "productName": "SkyOS",
+    "asar": true,
+    "compression": "maximum",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "Notho-freedom",
+        "repo": "SkyOS",           
+        "releaseType": "release",
+        "private": false
+      }
+    ],
+    "files": [
+      "dist/",            
+      "public/Electron/"
+    ],
+    "directories": {
+      "buildResources": "assets" 
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icon.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": true,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "SkyOS"
+    },
+    "mac": {
+      "target": "dmg",
+      "category": "public.app-category.productivity",
+      "icon": "assets/icon.ico"
+    },
+    "linux": {
+      "target": "deb",
+      "category": "Utility",
+      "icon": "assets/icon.ico"
+    }
+
+    
+  },
   "scripts": {
     "start": "vite",
-    "electron": "electron .",
     "build": "vite build",
-    "electron-pack": "vite build && electron ."
+    "electron": "electron .",
+    "electron-pack": "vite build && electron .",
+    "dist": "electron-builder"
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
@@ -24,7 +74,6 @@
     "cors": "^2.8.5",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
-    "electron": "^35.0.3",
     "framer-motion": "^12.6.3",
     "groq-sdk": "^0.19.0",
     "i18next": "^24.2.3",
@@ -49,7 +98,9 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "electron": "^35.0.3",
     "autoprefixer": "10.4.13",
+    "electron-builder": "^26.0.12",
     "postcss": "^8.5.3",
     "postcss-cli": "^10.0.0",
     "tailwindcss": "3.0.24",
